testsuite/tests/parser/should_fail/T20609.stderr

T20609.hs:6:1: error: [GHC-58481] parse error on input ‘forall’
